# third_party_clibs

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Setenv-android.sh  appveyor.yml  ci.py
freetype-2.7/: CMakeLists.txt
freetype-2.7/builds/windows/vc2010/: freetype.vcxproj
imobiledevice/: .appveyor.yml  .gitignore  CMakeLists.txt  README.md
imobiledevice/examples/: CMakeLists.txt  adb_jdwp.c  device_event.c  deviceid.c  proxy.c  syslog.c
imobiledevice/include/libimobiledevice/: adb.h  libimobiledevice.h  mobileactivation.h
imobiledevice/plist/: CMakeLists.txt
imobiledevice/src/: CMakeLists.txt  Makefile.am  afc.c  debugserver.c  diagnostics_relay.c  iadb.c  iadb.h  idevice.c  idevice.h  installation_proxy.c  lockdown.c  mobilesync.c  pinvoke.c  screenshotr.c  service.c  syslog_relay.c
imobiledevice/src/common/: CMakeLists.txt  dirent.h  libgen.c  socket.c  userpref.c  utils.c
imobiledevice/src/libusbmuxd/: CMakeLists.txt
imobiledevice/src/libusbmuxd/include/: usbmuxd-proto.h  usbmuxd.h
imobiledevice/src/libusbmuxd/src/: libusbmuxd.c
imobiledevice/tools/: Build.py  Download.py
openssl-1.1.0/: CMakeLists.txt
openssl-1.1.0/crypto/: CMakeLists.txt
openssl-1.1.0/crypto/engine/: CMakeLists.txt
openssl-1.1.0/ssl/: CMakeLists.txt
pcre2/: CMakeLists.txt
sqlite3/: CMakeLists.txt
tools/: __init__.py  android.py  cmake.py  common.py  download.py  msvc.py  win_pack.py  windows.py
zlib-1.2.11/: CMakeLists.txt
zlib-1.2.11/contrib/minizip/: CMakeLists.txt  ioapi.c
